# speedometre

./: CMakeLists.txt  integr.c  m  mxs.c  smth.cpp  third_e.cpp
2/: CMakeLists.txt  third_2.cpp  third_e.cpp
